--- a/analysis/process_notebook.ipynb
+++ b/analysis/process_notebook.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-05-18T15:36:41.986696Z",
-     "start_time": "2025-05-18T15:36:41.983532Z"
+     "end_time": "2025-05-19T12:48:56.989868Z",
+     "start_time": "2025-05-19T12:48:56.987412Z"
     }
    },
    "source": [
@@ -15,16 +15,16 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import numpy as np\n",
-    "from pandas.api.types import CategoricalDtype\n"
+    "from pandas.api.types import CategoricalDtype"
    ],
    "outputs": [],
-   "execution_count": 227
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-18T13:52:50.196540Z",
-     "start_time": "2025-05-18T13:52:49.799286Z"
+     "end_time": "2025-05-19T12:48:57.746869Z",
+     "start_time": "2025-05-19T12:48:57.009982Z"
     }
    },
    "cell_type": "code",
@@ -43,18 +43,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/d3/9chl4s4x2w1dxn5y2k9m88fc0000gn/T/ipykernel_5556/3778916847.py:5: DtypeWarning: Columns (8,16) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/d3/9chl4s4x2w1dxn5y2k9m88fc0000gn/T/ipykernel_9312/3778916847.py:5: DtypeWarning: Columns (8,16) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  women_matches = pd.read_csv('../data/all_matches_wta.csv')\n"
      ]
     }
    ],
-   "execution_count": 51
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-18T14:21:10.685205Z",
-     "start_time": "2025-05-18T14:21:10.277680Z"
+     "end_time": "2025-05-19T12:48:58.611182Z",
+     "start_time": "2025-05-19T12:48:57.879211Z"
     }
    },
    "cell_type": "code",
@@ -70,20 +70,20 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/d3/9chl4s4x2w1dxn5y2k9m88fc0000gn/T/ipykernel_5556/3172155176.py:1: DtypeWarning: Columns (7) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/d3/9chl4s4x2w1dxn5y2k9m88fc0000gn/T/ipykernel_9312/3930491513.py:1: DtypeWarning: Columns (7) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  atp_players = pd.read_csv('../data/tennis_atp/atp_players.csv')\n",
-      "/var/folders/d3/9chl4s4x2w1dxn5y2k9m88fc0000gn/T/ipykernel_5556/3172155176.py:3: DtypeWarning: Columns (7) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/d3/9chl4s4x2w1dxn5y2k9m88fc0000gn/T/ipykernel_9312/3930491513.py:3: DtypeWarning: Columns (7) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  wta_players = pd.read_csv('../data/tennis_wta/wta_players.csv')\n"
      ]
     }
    ],
-   "execution_count": 110
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-18T13:52:57.069725Z",
-     "start_time": "2025-05-18T13:52:57.053216Z"
+     "end_time": "2025-05-19T12:48:58.641968Z",
+     "start_time": "2025-05-19T12:48:58.626651Z"
     }
    },
    "cell_type": "code",
@@ -100,13 +100,13 @@
    ],
    "id": "72985aedc523f865",
    "outputs": [],
-   "execution_count": 52
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-18T13:52:57.346672Z",
-     "start_time": "2025-05-18T13:52:57.343393Z"
+     "end_time": "2025-05-19T12:48:58.659461Z",
+     "start_time": "2025-05-19T12:48:58.656651Z"
     }
    },
    "cell_type": "code",
@@ -117,13 +117,13 @@
    ],
    "id": "3772b1d000263ca7",
    "outputs": [],
-   "execution_count": 53
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-18T13:52:58.473596Z",
-     "start_time": "2025-05-18T13:52:58.445837Z"
+     "end_time": "2025-05-19T12:48:58.719236Z",
+     "start_time": "2025-05-19T12:48:58.674454Z"
     }
    },
    "cell_type": "code",
@@ -133,13 +133,13 @@
    ],
    "id": "ed5e9c32b3ba1eba",
    "outputs": [],
-   "execution_count": 54
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-18T13:53:14.035463Z",
-     "start_time": "2025-05-18T13:53:13.986778Z"
+     "end_time": "2025-05-19T12:48:58.799740Z",
+     "start_time": "2025-05-19T12:48:58.737919Z"
     }
    },
    "cell_type": "code",
@@ -167,13 +167,13 @@
    ],
    "id": "96855fee16e0c5dd",
    "outputs": [],
-   "execution_count": 56
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-18T14:53:27.659748Z",
-     "start_time": "2025-05-18T14:53:27.654313Z"
+     "end_time": "2025-05-19T15:03:01.727043Z",
+     "start_time": "2025-05-19T15:03:01.720858Z"
     }
    },
    "cell_type": "code",
@@ -199,7 +199,7 @@
    ],
    "id": "223d6fc4af91d347",
    "outputs": [],
-   "execution_count": 162
+   "execution_count": 13
   },
   {
    "metadata": {
@@ -295,14 +295,14 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-18T14:57:15.478311Z",
-     "start_time": "2025-05-18T14:57:15.474067Z"
+     "end_time": "2025-05-19T15:22:05.058551Z",
+     "start_time": "2025-05-19T15:22:05.052552Z"
     }
    },
    "cell_type": "code",
    "source": [
     "def get_avg_rank_player(match_df):\n",
-    "    return (pd.concat(\n",
+    "    player_matches = pd.concat(\n",
     "                    [\n",
     "                        match_df[['winner_id', 'winner_name', 'tourney_level', 'surface', 'decade', 'winner_rank']].rename(\n",
     "                            columns={'winner_name': 'player_name', 'winner_rank': 'rank', 'winner_id':'player_id'}),\n",
@@ -310,19 +310,205 @@
     "                             columns={'loser_name': 'player_name', 'loser_rank': 'rank', 'loser_id': 'player_id'})\n",
     "                    ],\n",
     "                    ignore_index=True\n",
-    "                ).groupby(['player_id', 'player_name', 'tourney_level', 'surface', 'decade']).\n",
-    "                        agg(avg_rank=('rank', 'mean')).\n",
-    "                        reset_index())"
+    "                )\n",
+    "    ranks_surf_tourney = player_matches.groupby(['player_id', 'player_name', 'tourney_level', 'surface', 'decade']).agg(avg_rank=('rank', 'mean')).reset_index()\n",
+    "    ranks_surf = player_matches.groupby(['player_id', 'player_name', 'surface', 'decade']).agg(avg_rank=('rank', 'mean')).reset_index()\n",
+    "    ranks_surf['tourney_level'] = 'All'\n",
+    "    ranks_tourney = player_matches.groupby(['player_id', 'player_name', 'tourney_level', 'decade']).agg(avg_rank=('rank', 'mean')).reset_index()\n",
+    "    ranks_tourney['surface'] = 'All'\n",
+    "    ranks_all = player_matches.groupby(['player_id', 'player_name', 'decade']).agg(avg_rank=('rank', 'mean')).reset_index()\n",
+    "    ranks_all['surface'] = 'All'\n",
+    "    ranks_all['tourney_level'] = 'All'\n",
+    "    \n",
+    "    return pd.concat(\n",
+    "        [\n",
+    "            ranks_surf_tourney[['player_id', 'player_name', 'decade', 'tourney_level', 'surface', 'avg_rank']],\n",
+    "            ranks_surf[['player_id', 'player_name', 'decade', 'tourney_level', 'surface', 'avg_rank']],\n",
+    "            ranks_tourney[['player_id', 'player_name', 'decade', 'tourney_level', 'surface', 'avg_rank']],\n",
+    "            ranks_all[['player_id', 'player_name', 'decade', 'tourney_level', 'surface', 'avg_rank']],\n",
+    "        ],\n",
+    "        axis = 0,\n",
+    "        ignore_index=True\n",
+    "    )"
    ],
    "id": "d5c311b36e297192",
    "outputs": [],
-   "execution_count": 174
+   "execution_count": 47
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-18T15:00:45.187133Z",
-     "start_time": "2025-05-18T15:00:45.183461Z"
+     "end_time": "2025-05-19T15:21:38.087417Z",
+     "start_time": "2025-05-19T15:21:37.918061Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "match_df = men_matches\n",
+   "id": "213798336aaee768",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "       player_id       player_name decade tourney_level surface     avg_rank\n",
+       "0         100282   Guillermo Vilas    90s             A    Clay   427.000000\n",
+       "1         100284     Jimmy Connors    90s             A  Carpet   443.200000\n",
+       "2         100284     Jimmy Connors    90s             A    Clay   362.777778\n",
+       "3         100284     Jimmy Connors    90s             A   Grass          NaN\n",
+       "4         100284     Jimmy Connors    90s             A    Hard   142.282051\n",
+       "...          ...               ...    ...           ...     ...          ...\n",
+       "30337     212021  Martin Landaluce    20s           All     All   497.333333\n",
+       "30338     212044           Yi Zhou    20s           All     All   599.428571\n",
+       "30339     212063       Matej Dodig    20s           All     All   310.000000\n",
+       "30340     212082  Joel Schwaerzler    20s           All     All   369.500000\n",
+       "30341     212733    Matthew Forbes    20s           All     All  1848.000000\n",
+       "\n",
+       "[30342 rows x 6 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>player_id</th>\n",
+       "      <th>player_name</th>\n",
+       "      <th>decade</th>\n",
+       "      <th>tourney_level</th>\n",
+       "      <th>surface</th>\n",
+       "      <th>avg_rank</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>100282</td>\n",
+       "      <td>Guillermo Vilas</td>\n",
+       "      <td>90s</td>\n",
+       "      <td>A</td>\n",
+       "      <td>Clay</td>\n",
+       "      <td>427.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>100284</td>\n",
+       "      <td>Jimmy Connors</td>\n",
+       "      <td>90s</td>\n",
+       "      <td>A</td>\n",
+       "      <td>Carpet</td>\n",
+       "      <td>443.200000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>100284</td>\n",
+       "      <td>Jimmy Connors</td>\n",
+       "      <td>90s</td>\n",
+       "      <td>A</td>\n",
+       "      <td>Clay</td>\n",
+       "      <td>362.777778</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>100284</td>\n",
+       "      <td>Jimmy Connors</td>\n",
+       "      <td>90s</td>\n",
+       "      <td>A</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>100284</td>\n",
+       "      <td>Jimmy Connors</td>\n",
+       "      <td>90s</td>\n",
+       "      <td>A</td>\n",
+       "      <td>Hard</td>\n",
+       "      <td>142.282051</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30337</th>\n",
+       "      <td>212021</td>\n",
+       "      <td>Martin Landaluce</td>\n",
+       "      <td>20s</td>\n",
+       "      <td>All</td>\n",
+       "      <td>All</td>\n",
+       "      <td>497.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30338</th>\n",
+       "      <td>212044</td>\n",
+       "      <td>Yi Zhou</td>\n",
+       "      <td>20s</td>\n",
+       "      <td>All</td>\n",
+       "      <td>All</td>\n",
+       "      <td>599.428571</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30339</th>\n",
+       "      <td>212063</td>\n",
+       "      <td>Matej Dodig</td>\n",
+       "      <td>20s</td>\n",
+       "      <td>All</td>\n",
+       "      <td>All</td>\n",
+       "      <td>310.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30340</th>\n",
+       "      <td>212082</td>\n",
+       "      <td>Joel Schwaerzler</td>\n",
+       "      <td>20s</td>\n",
+       "      <td>All</td>\n",
+       "      <td>All</td>\n",
+       "      <td>369.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30341</th>\n",
+       "      <td>212733</td>\n",
+       "      <td>Matthew Forbes</td>\n",
+       "      <td>20s</td>\n",
+       "      <td>All</td>\n",
+       "      <td>All</td>\n",
+       "      <td>1848.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>30342 rows × 6 columns</p>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 46
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-19T15:02:54.026175Z",
+     "start_time": "2025-05-19T15:02:54.023468Z"
     }
    },
    "cell_type": "code",
@@ -336,20 +522,36 @@
    ],
    "id": "393231384e16d8e7",
    "outputs": [],
-   "execution_count": 185
+   "execution_count": 12
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-18T15:00:45.397531Z",
-     "start_time": "2025-05-18T15:00:45.392005Z"
+     "end_time": "2025-05-19T15:25:14.938508Z",
+     "start_time": "2025-05-19T15:25:14.932850Z"
     }
    },
    "cell_type": "code",
    "source": [
     "def get_filter_player_data(match_df, player_df):\n",
     "    match_counts = get_match_counts_player(match_df, ['tourney_level', 'surface', 'decade'])\n",
-    "    match_counts = match_counts[['player_id', 'player_name', 'tourney_level', 'surface','decade', 'matches_won', 'matches_lost']]\n",
+    "    match_counts_all = get_match_counts_player(match_df, ['decade'])\n",
+    "    match_counts_all['surface'] = 'All'\n",
+    "    match_counts_all['tourney_level'] = 'All'\n",
+    "    match_counts_all_surfaces = get_match_counts_player(match_df, ['decade', 'tourney_level'])\n",
+    "    match_counts_all_surfaces['surface'] = 'All'\n",
+    "    match_counts_all_tourneys = get_match_counts_player(match_df, ['decade', 'surface'])\n",
+    "    match_counts_all_tourneys['tourney_level'] = 'All'\n",
+    "    match_counts = pd.concat(\n",
+    "        [\n",
+    "            match_counts[['player_id', 'player_name', 'tourney_level', 'surface','decade', 'matches_won', 'matches_lost']],\n",
+    "            match_counts_all[['player_id', 'player_name', 'tourney_level', 'surface','decade', 'matches_won', 'matches_lost']], \n",
+    "            match_counts_all_tourneys[['player_id', 'player_name', 'tourney_level', 'surface','decade', 'matches_won', 'matches_lost']],\n",
+    "            match_counts_all_surfaces[['player_id', 'player_name', 'tourney_level', 'surface','decade', 'matches_won', 'matches_lost']]\n",
+    "        ],\n",
+    "        axis=0,\n",
+    "        ignore_index=True\n",
+    "    )\n",
     "    match_counts['win_rate'] = match_counts['matches_won'] / (match_counts['matches_lost'] + match_counts['matches_won'])\n",
     "    player_data = pd.merge(match_counts, player_df[['player_id', 'player_name','hand','ioc']], on=['player_id', 'player_name'])\n",
     "    avg_rank = get_avg_rank_player(match_df)\n",
@@ -360,13 +562,13 @@
    ],
    "id": "5d02e2cdb7ea4f21",
    "outputs": [],
-   "execution_count": 186
+   "execution_count": 54
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-18T15:32:52.686901Z",
-     "start_time": "2025-05-18T15:32:52.390577Z"
+     "end_time": "2025-05-19T15:27:02.537627Z",
+     "start_time": "2025-05-19T15:27:01.281761Z"
     }
    },
    "cell_type": "code",
@@ -376,7 +578,7 @@
    ],
    "id": "1077dc1c6b2512f",
    "outputs": [],
-   "execution_count": 223
+   "execution_count": 59
   },
   {
    "metadata": {
@@ -415,8 +617,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-18T15:28:11.989380Z",
-     "start_time": "2025-05-18T15:28:11.983511Z"
+     "end_time": "2025-05-19T12:49:06.193688Z",
+     "start_time": "2025-05-19T12:49:06.188948Z"
     }
    },
    "cell_type": "code",
@@ -441,14 +643,30 @@
     "    \n",
     "    top_opponents = (\n",
     "        match_counts.sort_values(['player_id','match_count'], ascending=[True, False])\n",
-    "            .groupby(['player_id', 'surface'])\n",
-    "        .head(4)\n",
+    "            .groupby(['player_id'])\n",
+    "        .head(10)\n",
     "    )\n",
     "    return top_opponents"
    ],
    "id": "a9ec0c3a0cff52a7",
    "outputs": [],
-   "execution_count": 215
+   "execution_count": 8
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-19T12:49:18.263959Z",
+     "start_time": "2025-05-19T12:49:18.052850Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "get_rivalries(men_matches).to_csv('../data/atp_rivalries2.csv')\n",
+    "get_rivalries(women_matches).to_csv('../data/wta_rivalries2.csv')"
+   ],
+   "id": "3cf02eb057eb3030",
+   "outputs": [],
+   "execution_count": 9
   },
   {
    "metadata": {
@@ -469,8 +687,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-18T15:41:51.881259Z",
-     "start_time": "2025-05-18T15:41:51.877283Z"
+     "end_time": "2025-05-18T18:24:05.785615Z",
+     "start_time": "2025-05-18T18:24:05.780876Z"
     }
    },
    "cell_type": "code",
@@ -494,7 +712,7 @@
    ],
    "id": "fb0ed061c26613d7",
    "outputs": [],
-   "execution_count": 237
+   "execution_count": 8
   },
   {
    "metadata": {
@@ -610,14 +828,6 @@
    "id": "377914bac59502b6",
    "outputs": [],
    "execution_count": 249
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "e90c759db7e5b1c3"
   }
  ],
  "metadata": {
