--- a/analysis/process_notebook.ipynb
+++ b/analysis/process_notebook.ipynb
@@ -338,175 +338,6 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-19T15:21:38.087417Z",
-     "start_time": "2025-05-19T15:21:37.918061Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "match_df = men_matches\n",
-   "id": "213798336aaee768",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "       player_id       player_name decade tourney_level surface     avg_rank\n",
-       "0         100282   Guillermo Vilas    90s             A    Clay   427.000000\n",
-       "1         100284     Jimmy Connors    90s             A  Carpet   443.200000\n",
-       "2         100284     Jimmy Connors    90s             A    Clay   362.777778\n",
-       "3         100284     Jimmy Connors    90s             A   Grass          NaN\n",
-       "4         100284     Jimmy Connors    90s             A    Hard   142.282051\n",
-       "...          ...               ...    ...           ...     ...          ...\n",
-       "30337     212021  Martin Landaluce    20s           All     All   497.333333\n",
-       "30338     212044           Yi Zhou    20s           All     All   599.428571\n",
-       "30339     212063       Matej Dodig    20s           All     All   310.000000\n",
-       "30340     212082  Joel Schwaerzler    20s           All     All   369.500000\n",
-       "30341     212733    Matthew Forbes    20s           All     All  1848.000000\n",
-       "\n",
-       "[30342 rows x 6 columns]"
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>player_id</th>\n",
-       "      <th>player_name</th>\n",
-       "      <th>decade</th>\n",
-       "      <th>tourney_level</th>\n",
-       "      <th>surface</th>\n",
-       "      <th>avg_rank</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>100282</td>\n",
-       "      <td>Guillermo Vilas</td>\n",
-       "      <td>90s</td>\n",
-       "      <td>A</td>\n",
-       "      <td>Clay</td>\n",
-       "      <td>427.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>100284</td>\n",
-       "      <td>Jimmy Connors</td>\n",
-       "      <td>90s</td>\n",
-       "      <td>A</td>\n",
-       "      <td>Carpet</td>\n",
-       "      <td>443.200000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>100284</td>\n",
-       "      <td>Jimmy Connors</td>\n",
-       "      <td>90s</td>\n",
-       "      <td>A</td>\n",
-       "      <td>Clay</td>\n",
-       "      <td>362.777778</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>100284</td>\n",
-       "      <td>Jimmy Connors</td>\n",
-       "      <td>90s</td>\n",
-       "      <td>A</td>\n",
-       "      <td>Grass</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>100284</td>\n",
-       "      <td>Jimmy Connors</td>\n",
-       "      <td>90s</td>\n",
-       "      <td>A</td>\n",
-       "      <td>Hard</td>\n",
-       "      <td>142.282051</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30337</th>\n",
-       "      <td>212021</td>\n",
-       "      <td>Martin Landaluce</td>\n",
-       "      <td>20s</td>\n",
-       "      <td>All</td>\n",
-       "      <td>All</td>\n",
-       "      <td>497.333333</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30338</th>\n",
-       "      <td>212044</td>\n",
-       "      <td>Yi Zhou</td>\n",
-       "      <td>20s</td>\n",
-       "      <td>All</td>\n",
-       "      <td>All</td>\n",
-       "      <td>599.428571</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30339</th>\n",
-       "      <td>212063</td>\n",
-       "      <td>Matej Dodig</td>\n",
-       "      <td>20s</td>\n",
-       "      <td>All</td>\n",
-       "      <td>All</td>\n",
-       "      <td>310.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30340</th>\n",
-       "      <td>212082</td>\n",
-       "      <td>Joel Schwaerzler</td>\n",
-       "      <td>20s</td>\n",
-       "      <td>All</td>\n",
-       "      <td>All</td>\n",
-       "      <td>369.500000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30341</th>\n",
-       "      <td>212733</td>\n",
-       "      <td>Matthew Forbes</td>\n",
-       "      <td>20s</td>\n",
-       "      <td>All</td>\n",
-       "      <td>All</td>\n",
-       "      <td>1848.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>30342 rows × 6 columns</p>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 46
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
      "end_time": "2025-05-19T15:02:54.026175Z",
      "start_time": "2025-05-19T15:02:54.023468Z"
     }
@@ -579,6 +410,31 @@
    "id": "1077dc1c6b2512f",
    "outputs": [],
    "execution_count": 59
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-19T16:46:49.191998Z",
+     "start_time": "2025-05-19T16:46:48.572544Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "unique_atp_players = get_filter_player_data(men_matches,atp_players)[['player_id', 'player_name']].drop_duplicates()\n",
+    "unique_atp_players['association'] = 'atp'\n",
+    "unique_wta_players = get_filter_player_data(women_matches,wta_players)[['player_id', 'player_name']].drop_duplicates()\n",
+    "unique_wta_players['association'] = 'wta'\n",
+    "unique_players = pd.concat(\n",
+    "    [unique_atp_players, unique_wta_players],\n",
+    "    axis=0,\n",
+    "    ignore_index=True\n",
+    ")\n",
+    "unique_players.sort_values(by='player_name', inplace=True)\n",
+    "unique_players.to_csv('../data/all_players.csv')"
+   ],
+   "id": "d9e993700ce0478d",
+   "outputs": [],
+   "execution_count": 74
   },
   {
    "metadata": {
