--- a/analysis/process_notebook.ipynb
+++ b/analysis/process_notebook.ipynb
@@ -414,6 +414,42 @@
   {
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2025-05-19T17:42:06.372207Z",
+     "start_time": "2025-05-19T17:42:05.787376Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "countries = pd.concat(\n",
+    "    [get_filter_player_data(men_matches,atp_players)[['ioc']].drop_duplicates(),\n",
+    "    get_filter_player_data(women_matches,wta_players)[['ioc']].drop_duplicates()],\n",
+    "    axis=0\n",
+    ").drop_duplicates().sort_values(by='ioc')['ioc'].to_list()"
+   ],
+   "id": "6fa1844506036237",
+   "outputs": [],
+   "execution_count": 89
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-19T17:43:04.108887Z",
+     "start_time": "2025-05-19T17:43:04.105552Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import json\n",
+    "with open('../data/countries.json', 'w') as f:\n",
+    "    json.dump({x:x for x in countries},f)"
+   ],
+   "id": "4e813a2fc5161e31",
+   "outputs": [],
+   "execution_count": 91
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
      "end_time": "2025-05-19T16:46:49.191998Z",
      "start_time": "2025-05-19T16:46:48.572544Z"
     }
