use best rank instead of avg filter player

--- a/analysis/process_notebook.ipynb
+++ b/analysis/process_notebook.ipynb
@@ -6,14 +6,12 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-05-19T12:48:56.989868Z",
-     "start_time": "2025-05-19T12:48:56.987412Z"
+     "end_time": "2025-05-25T10:51:17.410544Z",
+     "start_time": "2025-05-25T10:51:14.093276Z"
     }
    },
    "source": [
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
     "import numpy as np\n",
     "from pandas.api.types import CategoricalDtype"
    ],
@@ -23,8 +21,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-19T12:48:57.746869Z",
-     "start_time": "2025-05-19T12:48:57.009982Z"
+     "end_time": "2025-05-25T10:51:18.102775Z",
+     "start_time": "2025-05-25T10:51:17.428825Z"
     }
    },
    "cell_type": "code",
@@ -43,7 +41,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/d3/9chl4s4x2w1dxn5y2k9m88fc0000gn/T/ipykernel_9312/3778916847.py:5: DtypeWarning: Columns (8,16) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/d3/9chl4s4x2w1dxn5y2k9m88fc0000gn/T/ipykernel_6135/3778916847.py:5: DtypeWarning: Columns (8,16) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  women_matches = pd.read_csv('../data/all_matches_wta.csv')\n"
      ]
     }
@@ -53,8 +51,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-19T12:48:58.611182Z",
-     "start_time": "2025-05-19T12:48:57.879211Z"
+     "end_time": "2025-05-25T10:51:18.858399Z",
+     "start_time": "2025-05-25T10:51:18.166406Z"
     }
    },
    "cell_type": "code",
@@ -70,9 +68,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/d3/9chl4s4x2w1dxn5y2k9m88fc0000gn/T/ipykernel_9312/3930491513.py:1: DtypeWarning: Columns (7) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/d3/9chl4s4x2w1dxn5y2k9m88fc0000gn/T/ipykernel_6135/3930491513.py:1: DtypeWarning: Columns (7) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  atp_players = pd.read_csv('../data/tennis_atp/atp_players.csv')\n",
-      "/var/folders/d3/9chl4s4x2w1dxn5y2k9m88fc0000gn/T/ipykernel_9312/3930491513.py:3: DtypeWarning: Columns (7) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/d3/9chl4s4x2w1dxn5y2k9m88fc0000gn/T/ipykernel_6135/3930491513.py:3: DtypeWarning: Columns (7) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  wta_players = pd.read_csv('../data/tennis_wta/wta_players.csv')\n"
      ]
     }
@@ -82,8 +80,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-19T12:48:58.641968Z",
-     "start_time": "2025-05-19T12:48:58.626651Z"
+     "end_time": "2025-05-25T10:51:18.888735Z",
+     "start_time": "2025-05-25T10:51:18.874991Z"
     }
    },
    "cell_type": "code",
@@ -105,8 +103,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-19T12:48:58.659461Z",
-     "start_time": "2025-05-19T12:48:58.656651Z"
+     "end_time": "2025-05-25T10:51:18.904523Z",
+     "start_time": "2025-05-25T10:51:18.902272Z"
     }
    },
    "cell_type": "code",
@@ -122,8 +120,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-19T12:48:58.719236Z",
-     "start_time": "2025-05-19T12:48:58.674454Z"
+     "end_time": "2025-05-25T10:51:18.956386Z",
+     "start_time": "2025-05-25T10:51:18.916929Z"
     }
    },
    "cell_type": "code",
@@ -138,8 +136,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-19T12:48:58.799740Z",
-     "start_time": "2025-05-19T12:48:58.737919Z"
+     "end_time": "2025-05-25T10:51:19.023353Z",
+     "start_time": "2025-05-25T10:51:18.969373Z"
     }
    },
    "cell_type": "code",
@@ -172,8 +170,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-19T15:03:01.727043Z",
-     "start_time": "2025-05-19T15:03:01.720858Z"
+     "end_time": "2025-05-25T10:53:33.170152Z",
+     "start_time": "2025-05-25T10:53:33.165742Z"
     }
    },
    "cell_type": "code",
@@ -199,13 +197,13 @@
    ],
    "id": "223d6fc4af91d347",
    "outputs": [],
-   "execution_count": 13
+   "execution_count": 12
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-18T14:53:27.829122Z",
-     "start_time": "2025-05-18T14:53:27.825560Z"
+     "end_time": "2025-05-25T10:53:34.909521Z",
+     "start_time": "2025-05-25T10:53:34.906050Z"
     }
    },
    "cell_type": "code",
@@ -218,13 +216,13 @@
    ],
    "id": "c7384c7bb71382c",
    "outputs": [],
-   "execution_count": 163
+   "execution_count": 13
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-18T16:04:04.731080Z",
-     "start_time": "2025-05-18T16:04:04.727459Z"
+     "end_time": "2025-05-25T10:53:35.065067Z",
+     "start_time": "2025-05-25T10:53:35.061403Z"
     }
    },
    "cell_type": "code",
@@ -240,13 +238,13 @@
    ],
    "id": "bee50f95e4151e3a",
    "outputs": [],
-   "execution_count": 252
+   "execution_count": 14
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-18T16:04:13.055335Z",
-     "start_time": "2025-05-18T16:04:13.051647Z"
+     "end_time": "2025-05-25T10:53:36.834360Z",
+     "start_time": "2025-05-25T10:53:36.830269Z"
     }
    },
    "cell_type": "code",
@@ -274,7 +272,7 @@
    ],
    "id": "d0a4a4fd25d956d2",
    "outputs": [],
-   "execution_count": 254
+   "execution_count": 15
   },
   {
    "metadata": {
@@ -295,8 +293,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-19T15:22:05.058551Z",
-     "start_time": "2025-05-19T15:22:05.052552Z"
+     "end_time": "2025-05-25T10:53:14.196225Z",
+     "start_time": "2025-05-25T10:53:14.190342Z"
     }
    },
    "cell_type": "code",
@@ -311,12 +309,12 @@
     "                    ],\n",
     "                    ignore_index=True\n",
     "                )\n",
-    "    ranks_surf_tourney = player_matches.groupby(['player_id', 'player_name', 'tourney_level', 'surface', 'decade']).agg(avg_rank=('rank', 'mean')).reset_index()\n",
-    "    ranks_surf = player_matches.groupby(['player_id', 'player_name', 'surface', 'decade']).agg(avg_rank=('rank', 'mean')).reset_index()\n",
+    "    ranks_surf_tourney = player_matches.groupby(['player_id', 'player_name', 'tourney_level', 'surface', 'decade']).agg(avg_rank=('rank', 'min')).reset_index()\n",
+    "    ranks_surf = player_matches.groupby(['player_id', 'player_name', 'surface', 'decade']).agg(avg_rank=('rank', 'min')).reset_index()\n",
     "    ranks_surf['tourney_level'] = 'All'\n",
-    "    ranks_tourney = player_matches.groupby(['player_id', 'player_name', 'tourney_level', 'decade']).agg(avg_rank=('rank', 'mean')).reset_index()\n",
+    "    ranks_tourney = player_matches.groupby(['player_id', 'player_name', 'tourney_level', 'decade']).agg(avg_rank=('rank', 'min')).reset_index()\n",
     "    ranks_tourney['surface'] = 'All'\n",
-    "    ranks_all = player_matches.groupby(['player_id', 'player_name', 'decade']).agg(avg_rank=('rank', 'mean')).reset_index()\n",
+    "    ranks_all = player_matches.groupby(['player_id', 'player_name', 'decade']).agg(avg_rank=('rank', 'min')).reset_index()\n",
     "    ranks_all['surface'] = 'All'\n",
     "    ranks_all['tourney_level'] = 'All'\n",
     "    \n",
@@ -333,13 +331,13 @@
    ],
    "id": "d5c311b36e297192",
    "outputs": [],
-   "execution_count": 47
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-19T15:02:54.026175Z",
-     "start_time": "2025-05-19T15:02:54.023468Z"
+     "end_time": "2025-05-25T10:53:14.537284Z",
+     "start_time": "2025-05-25T10:53:14.534294Z"
     }
    },
    "cell_type": "code",
@@ -353,13 +351,13 @@
    ],
    "id": "393231384e16d8e7",
    "outputs": [],
-   "execution_count": 12
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-19T15:25:14.938508Z",
-     "start_time": "2025-05-19T15:25:14.932850Z"
+     "end_time": "2025-05-25T10:53:19.562671Z",
+     "start_time": "2025-05-25T10:53:19.557206Z"
     }
    },
    "cell_type": "code",
@@ -393,13 +391,13 @@
    ],
    "id": "5d02e2cdb7ea4f21",
    "outputs": [],
-   "execution_count": 54
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-19T15:27:02.537627Z",
-     "start_time": "2025-05-19T15:27:01.281761Z"
+     "end_time": "2025-05-25T10:53:43.105729Z",
+     "start_time": "2025-05-25T10:53:41.713457Z"
     }
    },
    "cell_type": "code",
@@ -409,7 +407,7 @@
    ],
    "id": "1077dc1c6b2512f",
    "outputs": [],
-   "execution_count": 59
+   "execution_count": 16
   },
   {
    "metadata": {
